Fix copy-pasting selection of File Layer

If there's a selection, it should paste a new paint layer containing
the selection, instead of duplicating the entire File Layer.

BUG:459849